Various fixes for jobs/sites/tools

--- a/config/asset_packages.yml
+++ b/config/asset_packages.yml
@@ -2,6 +2,7 @@
 javascripts: 
 - base: 
   - jquery/jquery.tokeninput
+  - jquery/autoresize.jquery.min.js
   - rails
   - application
 stylesheets: 
