--- a/config/asset_packages.yml
+++ b/config/asset_packages.yml
@@ -2,7 +2,7 @@
 javascripts: 
 - base: 
   - jquery/jquery.tokeninput
-  - jquery/autoresize.jquery.min.js
+  - jquery/autoresize.jquery.min
   - rails
   - application
 stylesheets: 
