Updated to not require ssl path, but it's still possible

--- a/config/application.yml
+++ b/config/application.yml
@@ -1,12 +1,16 @@
 defaults: &defaults
-  root_url: "https://www.lineofthought.com"
-  root_domain: "www.lineofthought.com"
+  root_url: "http://lineofthought.com"
+  root_domain: "lineofthought.com"
+  ssl_root_domain: "www.lineofthought.com"
+  ssl_root_url: "https://www.lineofthought.com"
   root_image_url: "https://s3.amazonaws.com/s.lineofthought.com"
 
 development:
  <<: *defaults
  root_domain: "dev.lineofthought.com:3000"
  root_url: "http://dev.lineofthought.com:3000"
+ ssl_root_domain: "dev.lineofthought.com"
+ ssl_root_url: "http://dev.lineofthought.com"
 
 test:
  <<: *defaults
