--- a/config/application.yml
+++ b/config/application.yml
@@ -5,16 +5,14 @@ defaults: &defaults
   ssl_root_url: "https://www.lineofthought.com"
   root_image_url: "https://s3.amazonaws.com/s.lineofthought.com"
   ssl_schema: "https"
-  default_port: 80
 
 development:
  <<: *defaults
  root_domain: "dev.lineofthought.com:3000"
  root_url: "http://dev.lineofthought.com:3000"
- ssl_root_domain: "dev.lineofthought.com"
+ ssl_root_domain: "dev.lineofthought.com:3000"
  ssl_root_url: "http://dev.lineofthought.com"
  ssl_schema: "http"
- default_port: 3000
 
 test:
  <<: *defaults
