--- a/config/application.yml
+++ b/config/application.yml
@@ -5,13 +5,14 @@ defaults: &defaults
   ssl_root_url: "https://www.lineofthought.com"
   root_image_url: "https://s3.amazonaws.com/s.lineofthought.com"
   ssl_schema: "https"
+  default_schema: "http"
 
 development:
  <<: *defaults
- root_domain: "dev.lineofthought.com:3000"
+ root_domain: "dev.lineofthought.com"
  root_url: "http://dev.lineofthought.com:3000"
- ssl_root_domain: "ssl.dev.lineofthought.com:3000"
- ssl_root_url: "http://ssl.dev.lineofthought.com"
+ ssl_root_domain: "ssl.dev.lineofthought.com"
+ ssl_root_url: "http://ssl.dev.lineofthought.com:3000"
  ssl_schema: "http"
 
 test:
