--- a/config/application.yml
+++ b/config/application.yml
@@ -1,7 +1,9 @@
 defaults: &defaults
   root_url: "http://lineofthought.com"
   root_domain: "lineofthought.com"
+  root_domain_with_port: "lineofthought.com"
   ssl_root_domain: "www.lineofthought.com"
+  ssl_root_domain_with_port: "www.lineofthought.com"
   ssl_root_url: "https://www.lineofthought.com"
   root_image_url: "https://s3.amazonaws.com/s.lineofthought.com"
   ssl_schema: "https"
@@ -10,8 +12,10 @@ defaults: &defaults
 development:
  <<: *defaults
  root_domain: "dev.lineofthought.com"
+ root_domain_with_port: "dev.lineofthought.com:3000"
  root_url: "http://dev.lineofthought.com:3000"
  ssl_root_domain: "ssl.dev.lineofthought.com"
+ ssl_root_domain_with_port: "ssl.dev.lineofthought.com:3000"
  ssl_root_url: "http://ssl.dev.lineofthought.com:3000"
  ssl_schema: "http"
 
