--- a/config/application.yml
+++ b/config/application.yml
@@ -7,9 +7,8 @@ defaults: &defaults
   ssl_schema: "https"
   default_schema: "http"
   ssl_root_domain_with_port: "www.lineofthought.com"
+  ssl_root_url: "https://www.lineofthought.com"
 
-
-  # ssl_root_url: "https://www.lineofthought.com"
   # root_image_url: "https://s3.amazonaws.com/s.lineofthought.com"
   
 
@@ -22,8 +21,8 @@ development:
  ssl_root_domain: "ssl.dev.lineofthought.com"
  ssl_schema: "http"
  ssl_root_domain_with_port: "ssl.dev.lineofthought.com:3000"
+ ssl_root_url: "http://ssl.dev.lineofthought.com:3000"
 
- # ssl_root_url: "http://ssl.dev.lineofthought.com:3000"
  # ssl_schema: "http"
 
 test:
