--- a/config/asset_packages.yml
+++ b/config/asset_packages.yml
@@ -3,6 +3,8 @@ javascripts:
 - all: 
   - rails
   - handlebars-0.9.0.pre.4
+  - jquery.linkToModal
+  - jquery.facebox
   - application
 stylesheets: 
 - all: 
@@ -13,3 +15,4 @@ stylesheets:
   - forms
   - list
   - buttons
+  - facebox
